--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -38,6 +38,17 @@
         android:gravity="bottom"
         android:layout_centerInParent="true"
         android:layout_below="@id/phone_no_desc">
+      <EditText
+          android:id="@+id/country_code"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="+1"
+          android:textSize="18sp"
+          android:textColor="#d8cbcb"
+          android:gravity="center_horizontal"
+          android:backgroundTint="#faf8f8"
+          />
+
       <ImageView
           android:layout_width="32dp"
           android:layout_height="32dp"
@@ -59,4 +70,13 @@
           android:backgroundTint="@color/colorWhite"
           android:hint="Ten digits phone no"/>
     </LinearLayout>
+  <ProgressBar
+      android:layout_gravity="center"
+      android:layout_centerHorizontal="true"
+      android:layout_centerVertical="true"
+      android:visibility="invisible"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:id="@+id/busy_send"/>
+
 </RelativeLayout>
