--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -68,7 +68,7 @@
           android:textColor="@color/colorWhite"
           android:textColorHint="@color/colorWhite"
           android:backgroundTint="@color/colorWhite"
-          android:hint="Ten digits phone no"/>
+          android:hint="10 अन्को का फोन"/>
     </LinearLayout>
   <ProgressBar
       android:layout_gravity="center"
