--- a/app/src/main/res/layout/news_feed_fragment.xml
+++ b/app/src/main/res/layout/news_feed_fragment.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#afafaf"
+    android:visibility="visible"
+    android:background="@color/colorWhite"
     android:label="">
 
     <ProgressBar
@@ -20,7 +21,16 @@
         android:id="@+id/news_feed_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="25dp"/>
+        />
+
+    <android.support.design.widget.FloatingActionButton
+    android:id="@+id/fab"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:src="@mipmap/edit_icon"
+    android:layout_gravity="end|bottom"
+    android:layout_margin="16dp" />
 
 </RelativeLayout>
