Added card view in recyclerview

--- a/app/src/main/res/layout/news_feed_fragment.xml
+++ b/app/src/main/res/layout/news_feed_fragment.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="visible"
-    android:background="@color/colorWhite"
+    android:layout_marginLeft="2dp"
+    android:layout_marginRight="2dp"
+    android:background="#F2F2F2"
     android:label="">
 
     <ProgressBar
