--- a/app/src/main/res/layout/fragment_edit_photo.xml
+++ b/app/src/main/res/layout/fragment_edit_photo.xml
@@ -15,19 +15,59 @@
         android:id="@+id/image_section"
         android:layout_height="wrap_content" />
 
-    <Button
+
+    <android.support.v7.widget.RecyclerView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/composer_images_view"
+        android:orientation="horizontal"
         android:layout_below="@+id/image_section"
-        android:layout_width="wrap_content"
-        android:text="Create"
-        android:id="@+id/create_img"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+    <RelativeLayout
+
+        android:layout_below="@+id/image_section"
+        android:layout_width="match_parent"
+        android:id="@+id/user_select"
         android:layout_marginTop="50dp"
-        android:layout_marginEnd="50dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:text="Create"
+            android:id="@+id/create_img"
+            android:layout_marginEnd="50dp"
+            android:layout_height="wrap_content" />
+
+
+
+        <TextView
+            android:layout_toRightOf="@+id/create_img"
+            android:layout_marginLeft="30dp"
+            android:textStyle="bold"
+            android:text="Select Image"
+            android:layout_width="match_parent"
+            android:id="@+id/select_galary"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
 
     <ImageView
+        android:layout_below="@+id/user_select"
         android:layout_width="match_parent"
         android:id="@+id/created_one"
-        android:layout_below="@+id/create_img"
         android:layout_height="wrap_content" />
+
+    <GridView
+        android:layout_below="@+id/user_select"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/all_images"
+        android:numColumns="3"
+        android:layout_marginLeft="1dp"
+        android:layout_marginRight="1dp"></GridView>
+
 
 </RelativeLayout>
