--- a/app/src/main/res/layout/composer_fragment.xml
+++ b/app/src/main/res/layout/composer_fragment.xml
@@ -4,64 +4,130 @@
     android:layout_marginTop="30dp"
 
     android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/theme_image"
-        android:adjustViewBounds="true"
-        android:scaleType="fitXY"
-        android:layout_width="match_parent"
-        android:src="@drawable/user_profile"
-        android:layout_height="wrap_content" >
-
-    </ImageView>
-
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_marginTop="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:textSize="20dp"
+        android:textAlignment="center"
+        android:layout_centerHorizontal="true"
         android:id="@+id/user_post_text"
         android:inputType="textMultiLine"
         android:hint="कुछ धाकड़ लिखे"
         android:background="#00000000"
+        android:focusable="true"
         />
 
+    <ImageView
+        android:layout_below="@+id/user_post_text"
+        android:id="@+id/post_image"
+        android:adjustViewBounds="true"
+        android:visibility="invisible"
+        android:scaleType="fitXY"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
-    <android.support.v7.widget.RecyclerView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/composer_images_view"
+    </ImageView>
+
+    <LinearLayout
+        android:id="@+id/composer_chooser"
         android:orientation="horizontal"
-        android:layout_below="@+id/theme_image"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:layout_marginTop="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/composer_images_view">
-
-        <TextView
-            android:id="@+id/image_select"
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:text="Photo Choose kren"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+            <ImageView
+                android:background="@drawable/ciruclar_image_select"
+                android:id="@+id/image_select"
+                android:src="@drawable/galary_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/camera_select"
-            android:layout_below="@+id/image_select"
+            <TextView
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/image_select"
+                android:text="फोटो "
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_marginLeft="40dp"
             android:layout_width="wrap_content"
-            android:text="Camera"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/ciruclar_image_select"
+                android:id="@+id/whatsapp_photo"
+                android:backgroundTint="@color/green"
+                android:src="@drawable/whatsapp_photo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-        <TextView
-            android:layout_below="@+id/camera_select"
-            android:id="@+id/gif_select"
+            <TextView
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/whatsapp_photo"
+                android:text="व्हाट्सप्प फोटो"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:layout_marginLeft="40dp"
             android:layout_width="wrap_content"
-            android:text="Gif"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+            <ImageView
+                android:background="@drawable/ciruclar_image_select"
+                android:id="@+id/camera_select"
+                android:backgroundTint="@color/colorLightGreen"
+                android:src="@drawable/camera_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-    </RelativeLayout>
+            <TextView
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/camera_select"
+                android:text="कैमरा"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_marginLeft="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:background="@drawable/ciruclar_image_select"
+                android:id="@+id/video_select"
+                android:backgroundTint="@color/lightPink"
+                android:src="@drawable/video_select_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/video_select"
+                android:text="वीडियो"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
