--- a/app/src/main/res/layout/composer_fragment.xml
+++ b/app/src/main/res/layout/composer_fragment.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_marginTop="30dp"
-
+    android:layout_marginTop="5dp"
     android:layout_height="match_parent">
+    <LinearLayout
+        android:id="@+id/add_post_action"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:src="@drawable/add_post"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:text="पोस्ट करें "
+            android:layout_height="wrap_content" />
+    </LinearLayout>
     <EditText
+        android:layout_below="@+id/add_post_action"
         android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,6 +33,7 @@
         android:hint="कुछ धाकड़ लिखे"
         android:background="#00000000"
         android:focusable="true"
+        android:layout_marginBottom="30dp"
         />
 
     <ImageView
@@ -24,8 +42,6 @@
         android:adjustViewBounds="true"
         android:visibility="invisible"
         android:scaleType="fitXY"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
