--- a/app/src/main/res/layout/composer_fragment.xml
+++ b/app/src/main/res/layout/composer_fragment.xml
@@ -3,26 +3,37 @@
     android:layout_width="match_parent"
     android:layout_marginTop="5dp"
     android:layout_height="match_parent">
-    <LinearLayout
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:id="@+id/add_post_action"
-        android:layout_centerHorizontal="true"
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_centerHorizontal="true"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@drawable/add_post"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:text="पोस्ट करें "
+                android:layout_height="wrap_content" />
+        </LinearLayout>
         <ImageView
-            android:src="@drawable/add_post"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:text="पोस्ट करें "
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            android:layout_alignParentRight="true"
+            android:background="@color/colorLightGreen"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/check_mark_icon"
+            />
+
+    </RelativeLayout>
     <EditText
         android:layout_below="@+id/add_post_action"
-        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20dp"
