--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,10 @@
     <color name="colorLightGreen">#98bf7a</color>
     <color name="lightPink">#7ab3bf</color>
     <color name="green">#7ABF8C</color>
+
+    <color name="grey">#bfbfbf</color>
+    <color name="white">#fff</color>
+    <color name="black">#000000</color>
+    <color name="link_blue">#4d94ff</color>
+    <color name="darkRed">#cc0000</color>
 </resources>
