--- a/app/src/main/res/layout/tag_search_fragment.xml
+++ b/app/src/main/res/layout/tag_search_fragment.xml
@@ -4,20 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
-        android:background="@color/colorLightGreen"
         android:id="@+id/post_description"
         android:layout_width="match_parent"
-        android:layout_height="128dp">
+        android:layout_height="64dp">
         <ImageView
-            android:layout_width="128dp"
+            android:layout_width="80dp"
             android:id="@+id/user_post_image"
-            android:layout_height="128dp" />
+            android:layout_height="match_parent" />
         <EditText
             android:background="@null"
+            android:id="@+id/composer_post_text"
+            android:backgroundTint="@color/grey"
             android:layout_toRightOf="@+id/user_post_image"
-            android:hint="yahan kuchh likhe"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:hint="यहाँ  कुछ  लिखे"
+            android:focusable="true"
+            android:layout_marginLeft="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </RelativeLayout>
     <RelativeLayout
         android:layout_marginTop="10dp"
@@ -35,6 +38,7 @@
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/one"
+                android:backgroundTint="@color/colorLightGreen"
                 android:background="@drawable/shape_chip_drawable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -65,24 +69,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:id="@+id/one"
+                android:id="@+id/four"
                 android:background="@drawable/shape_chip_drawable"
                 android:layout_width="wrap_content"
                 android:text="नरेंद्र मोदी"
                 android:layout_height="wrap_content" />
             <TextView
-                android:id="@+id/two"
+                android:id="@+id/five"
                 android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@+id/one"
+                android:layout_toRightOf="@+id/four"
                 android:background="@drawable/shape_chip_drawable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="हैप्पी इंडिपेंडेंस डे" />
             <TextView
 
-                android:id="@+id/three"
+                android:id="@+id/six"
                 android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@+id/two"
+                android:layout_toRightOf="@+id/five"
                 android:background="@drawable/shape_chip_drawable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -96,24 +100,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:id="@+id/one"
+                android:id="@+id/seven"
                 android:background="@drawable/shape_chip_drawable"
                 android:layout_width="wrap_content"
                 android:text="नरेंद्र मोदी"
                 android:layout_height="wrap_content" />
             <TextView
-                android:id="@+id/two"
+                android:id="@+id/eight"
                 android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@+id/one"
+                android:layout_toRightOf="@+id/seven"
                 android:background="@drawable/shape_chip_drawable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="सचिन तेंदुलकर" />
             <TextView
 
-                android:id="@+id/three"
+                android:id="@+id/nine"
                 android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@+id/two"
+                android:layout_toRightOf="@+id/eight"
                 android:background="@drawable/shape_chip_drawable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -128,30 +132,45 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:id="@+id/one"
+                android:id="@+id/ten"
                 android:background="@drawable/shape_chip_drawable"
                 android:layout_width="wrap_content"
                 android:text="लव योर जिंदगी"
                 android:layout_height="wrap_content" />
             <TextView
-                android:id="@+id/two"
+                android:id="@+id/eleven"
                 android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@+id/one"
+                android:layout_toRightOf="@+id/ten"
                 android:background="@drawable/shape_chip_drawable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="माता - पिता" />
             <TextView
 
-                android:id="@+id/three"
+                android:id="@+id/twelve"
                 android:layout_marginLeft="10dp"
-                android:layout_toRightOf="@+id/two"
+                android:layout_toRightOf="@+id/eleven"
                 android:background="@drawable/shape_chip_drawable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="लोगो के लिए सिख"/>
         </LinearLayout>
 
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/create_post"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/popular_tags"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_centerHorizontal="true"
+            android:background="@color/colorLightGreen"
+            android:text="पोस्ट करें"
+            />
     </RelativeLayout>
 
 </RelativeLayout>
