--- a/app/src/main/res/layout/layout_grid_imageview.xml
+++ b/app/src/main/res/layout/layout_grid_imageview.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:padding="1dp"
 
     android:layout_height="wrap_content">
@@ -10,6 +10,7 @@
         android:background="@color/colorWhite"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         android:id="@+id/gridImageView"/>
 
