--- a/app/src/main/res/layout/news_feed_fragment.xml
+++ b/app/src/main/res/layout/news_feed_fragment.xml
@@ -10,6 +10,16 @@
     android:background="#F2F2F2"
     android:label="">
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/relLayout1">
+
+        <!-- gallery toolbar -->
+        <include layout="@layout/snippet_app_header"/>
+
+    </RelativeLayout>
+
     <ProgressBar
         android:layout_gravity="center"
         android:layout_centerHorizontal="true"
@@ -21,6 +31,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/news_feed_list"
+        android:layout_below="@+id/relLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
