--- a/app/src/main/res/layout/recycler_galary_fragment.xml
+++ b/app/src/main/res/layout/recycler_galary_fragment.xml
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-
+                android:src="@color/colorWhite"
                 android:layout_height="match_parent"
                 />
 
@@ -43,11 +43,10 @@
             android:layout_height="0dp"
             android:layout_weight="40"
             android:id="@+id/all_images"
-
             android:gravity="center"
             android:background="@color/colorWhite"
             android:layout_marginLeft="1dp"
-            android:layout_marginRight="1dp"></android.support.v7.widget.RecyclerView>
+            android:layout_marginRight="1dp"/>
     </LinearLayout>
 
 </RelativeLayout>
