--- a/app/src/main/res/layout/tag_search_fragment.xml
+++ b/app/src/main/res/layout/tag_search_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/colorWhite"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
@@ -49,7 +50,7 @@
         android:gravity="center"
         android:background="@color/colorLightGreen"
         android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"></android.support.v7.widget.RecyclerView>
+        android:layout_marginRight="1dp"/>
 
 
 </RelativeLayout>
