Fragment for comment section

--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:background="#F2F2F2"
-    android:visibility="invisible"
+    android:visibility="visible"
     android:gravity="center_horizontal"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -56,7 +56,8 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:padding="2dp"
-            android:src="@drawable/user_profile"
+            android:backgroundTint="@color/colorAccent"
+            android:src="@drawable/ic_user_white"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
             android:gravity="center_vertical"
@@ -130,8 +131,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <RelativeLayout
         android:layout_centerHorizontal="true"
         android:id="@+id/action_section"
         android:layout_below="@+id/banner_image"
@@ -139,52 +139,33 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-
-            android:id="@+id/whatsapp_sharing"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/whatsapp_photo" />
-
-        <ImageView
-            android:layout_marginLeft="50dp"
-
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-
+            android:layout_marginLeft="40dp"
+            android:layout_alignParentLeft="true"
             android:id="@+id/like_icon"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@mipmap/like_icon_lnch"
+            android:src="@drawable/ic_like_heart"
             />
 
 
         <ImageView
-            android:layout_marginLeft="50dp"
             android:layout_centerHorizontal="true"
+            android:id="@+id/whatsapp_sharing"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/whatsapp" />
+
+
+        <ImageView
+            android:layout_marginRight="40dp"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
 
             android:id="@+id/comment_icon"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/comment_icon"
             />
-
-        <ImageView
-            android:layout_marginLeft="50dp"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-
-            android:id="@+id/download_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/download_icon"
-            />
-
-    </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
     </android.support.v7.widget.CardView>
 
