--- a/app/src/main/res/layout/news_feed_fragment.xml
+++ b/app/src/main/res/layout/news_feed_fragment.xml
@@ -39,10 +39,12 @@
     <android.support.design.widget.FloatingActionButton
     android:id="@+id/fab"
     android:layout_width="wrap_content"
+
     android:layout_height="wrap_content"
+        app:backgroundTint="@color/orange"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:src="@mipmap/edit_icon"
+        android:src="@drawable/ic_plus"
     android:layout_gravity="end|bottom"
     android:layout_margin="16dp" />
 
