--- a/app/src/main/res/layout/snippet_app_header.xml
+++ b/app/src/main/res/layout/snippet_app_header.xml
@@ -17,6 +17,15 @@
                 android:layout_height="match_parent">
 
                 <ImageView
+                    android:layout_alignParentLeft="true"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_centerVertical="true"
+                    android:id="@+id/menu"
+                    android:src="@drawable/ic_menu_h"/>
+
+                <ImageView
                     android:layout_alignParentRight="true"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
