--- a/app/src/main/res/layout/news_feed_fragment.xml
+++ b/app/src/main/res/layout/news_feed_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:visibility="invisible"
+    android:visibility="visible"
     android:layout_marginLeft="2dp"
     android:layout_marginRight="2dp"
     android:background="#F2F2F2"
