--- a/app/src/main/res/layout/layout_center_view_profile.xml
+++ b/app/src/main/res/layout/layout_center_view_profile.xml
@@ -90,6 +90,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
+                    android:visibility="gone"
                     android:text="https://codingwithmitch.com"
                     android:textColor="@color/link_blue"
                     android:textSize="16sp"
