--- a/app/src/main/res/layout/snippet_top_editprofiletoolbar.xml
+++ b/app/src/main/res/layout/snippet_top_editprofiletoolbar.xml
@@ -26,15 +26,15 @@
                     android:src="@drawable/ic_backarrow"/>
 
                 <TextView
-                    android:layout_toRightOf="@+id/backArrow"
+                    android:id="@+id/profileName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:text="Edit Profile"
-                    android:textSize="20sp"
-                    android:textColor="@color/black"
                     android:layout_marginStart="5dp"
-                    android:id="@+id/profileName"/>
+                    android:layout_toRightOf="@+id/backArrow"
+                    android:text="प्रोफाइल बदलें"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
 
                 <ImageView
                     android:layout_width="30dp"
@@ -46,6 +46,16 @@
                     android:src="@drawable/ic_checkmark"
                     android:layout_alignParentRight="true"/>
 
+                <ProgressBar
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_centerVertical="true"
+                    android:id="@+id/saveChangesBusy"
+                    android:visibility="invisible"
+                    android:src="@drawable/ic_checkmark"
+                    android:layout_alignParentRight="true"/>
 
             </RelativeLayout>
 
