--- a/app/src/main/res/layout/snippet_top_view_profile.xml
+++ b/app/src/main/res/layout/snippet_top_view_profile.xml
@@ -13,7 +13,7 @@
             android:id="@+id/tvPosts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="250"
+            android:text="0"
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent"
@@ -36,7 +36,7 @@
             android:id="@+id/tvFollowers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="300"
+            android:text="0"
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent"
@@ -65,7 +65,7 @@
             android:id="@+id/tvFollowing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="400"
+            android:text="0"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:layout_marginTop="2dp"
@@ -87,27 +87,29 @@
         <TextView
             android:id="@+id/follow"
             android:layout_width="156dp"
-            android:layout_height="18dp"
+            android:layout_height="38dp"
+            android:paddingTop="10dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/follow_button"
             android:text="Follow"
+            android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="14sp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textFollowers"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintVertical_bias="0.0"
-            android:textAlignment="center"
-            android:visibility="gone"
-            android:background="@drawable/follow_button"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textFollowers"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/unfollow"
             android:layout_width="156dp"
-            android:layout_height="18dp"
+            android:layout_height="38dp"
+            android:paddingTop="10dp"
             android:text="Unfollow"
             android:textColor="@color/white"
             android:textSize="14sp"
@@ -121,8 +123,8 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintVertical_bias="0.0"
             android:textAlignment="center"
-            android:background="@drawable/ic_backarrow"
-            android:visibility="gone"/>
+            android:background="@drawable/unfollow_button"
+            android:visibility="invisible"/>
 
         <TextView
             android:id="@+id/textEditProfile"
@@ -142,7 +144,7 @@
             app:layout_constraintVertical_bias="0.0"
             android:textAlignment="center"
             android:background="@drawable/grey_border"
-            android:visibility="visible"/>
+            android:visibility="invisible"/>
 
 
     </android.support.constraint.ConstraintLayout>
