--- a/app/src/main/res/layout/news_feed_fragment.xml
+++ b/app/src/main/res/layout/news_feed_fragment.xml
@@ -1,24 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:visibility="visible"
-    android:layout_marginLeft="2dp"
-    android:layout_marginRight="2dp"
-    android:background="#F2F2F2"
-    android:label="">
+<android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/relLayout1">
+
 
         <!-- gallery toolbar -->
         <include layout="@layout/snippet_app_header"/>
 
-    </RelativeLayout>
 
     <RelativeLayout
         android:layout_below="@+id/relLayout1"
@@ -72,6 +63,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/news_feed_list"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_below="@+id/upload_preview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -89,4 +81,4 @@
     android:layout_gravity="end|bottom"
     android:layout_margin="16dp" />
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
